@@ -1,3 +1,6 @@
+2009-05-18: Jason Long <jlong@messiah.edu>
+ * t/signer.t: add a test-case of a message without a header
+
 2009-04-04: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Verifier.pm (fetch_author_domain_policies): new method
    for fetching ADSP records for a particular message
